# nats-es

./: .env  .gitignore  Cargo.toml  Makefile
benches/: my_benchmark.rs
scripts/nats/: nats.conf
src/: event_repository.rs  lib.rs  types.rs  views_repository.rs
tests/: integration.rs
