[package]
name = "nats-es"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-nats = "0.35"
async-trait = "0.1"
cqrs-es = "0.4"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
dotenvy = "0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
envy = "0"
uuid = { version = "1", features= ["v4"] }
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "my_benchmark"
harness = false
